--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -26,16 +26,19 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ##################
 ### USER INPUT ###
-##################
+################## 
 
 tmp <- getwd()
 if(substr(tmp,1,12) == "C:/Users/Mie"){
   # Mie
   setwd("C:/Users/Mie/OneDrive/CBS/Kandidat/data")
-} else if(substr(tmp,1,4) == "C:/Users/Alexm"){
+} else if(substr(tmp,1,14) == "C:/Users/Alexm"){
   # Mogensen
   setwd("C:/Users/Alexm/Documents")
-} 
+} else{
+  # Philip
+  setwd("C:/Users/phili/OneDrive - CBS - Copenhagen Business School/Desktop/Code/R - code/AEF")
+}
 
 print(getwd())
 
