--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -54,9 +54,29 @@ options(scipen = 999)
 # Loading data
 tidy_finance <- dbConnect(SQLite(), "tidy_finance.sqlite", extended_types = TRUE) # Connect to sql
 crsp_monthly <- tbl(tidy_finance, "crsp_monthly") %>% collect() %>% select("permno", "date", "month", "ret", "mktcap", "mktcap_lag", "industry", "ret_excess")
- 
-# Filtering on desired time interval for uninterrupted stocks
-crsp_monthly_reduced <- crsp_monthly[crsp_monthly$permno %in% (intersect(crsp_monthly %>% filter(month=="1962-01-01") %>% select(permno),crsp_monthly %>% filter(month=="2019-12-01") %>% select(permno)))$permno,]
 
 ```
+
+```{r filtration of data, echo=FALSE}
+# Filtering on desired time interval for uninterrupted stocks
+crsp_monthly_reduced <- crsp_monthly[crsp_monthly$permno %in% (intersect(crsp_monthly %>% filter(month=="1962-01-01") %>% select(permno),crsp_monthly %>% filter(month=="2019-12-01") %>% select(permno)))$permno,]
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
