--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -96,19 +96,19 @@ We see that on average a equally weighted portfolio with all assets in our inves
 
 ```{r excersise 2: compute optimal weights, echo=FALSE}
 # Function that computes the optimal weights
-optimal_weights <- function(w_prev, mu, Sigma, beta, gamma = gamma_default, B){
+optimal_weights <- function(w_prev, mu, Sigma, lambda, gamma = gamma_default, B){
   N <- ncol(Sigma)
   iota <- rep(1, N)
   
-  Sigma_proc <- Sigma + beta / gamma * diag(B) # Cost-adjusted sigma
-  mu_proc <- mu + beta * diag(B) %*% w_prev # Cost-adjusted mu
+  mu_star <- mu + 2 * lambda * Sigma %*% w_prev # Cost-adjusted mu
+  Sigma_star <- (gamma + 2 * lambda) / gamma * Sigma # Cost-adjusted sigma
   
-  Sigma_inv <- solve(Sigma_proc) # invert Sigma 
+  Sigma_inv <- solve(Sigma_star) # invert Sigma 
   
-  # Calculates the optimal weights
+  # Calculates the optimal portfolio weights
   w_mvp <- Sigma_inv %*% iota
   w_mvp <- w_mvp / sum(w_mvp)
-  w_opt <- w_mvp  + 1/gamma * (Sigma_inv - w_mvp %*% t(iota) %*% Sigma_inv) %*% mu_proc
+  w_opt <- w_mvp  + 1/gamma * (Sigma_inv - w_mvp %*% t(iota) %*% Sigma_inv) %*% mu_star
   return(w_opt)
 }
 
