--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -216,7 +216,7 @@ Sigma <- returns %>% cov() %>% as.matrix()
 N<-nrow(Sigma)
 window_length<-12
 months<-sort(unique(crsp_monthly_reduced$month))
-periods<-17-window_length #Number of periods
+periods<-13-window_length #Number of periods
 NP_return<-rep(0,periods)
 HEA_return<-rep(0,periods)
 NSS_return<-rep(0,periods)
@@ -231,63 +231,84 @@ NSS_TC<-rep(0,periods)
 
 test_mu<-rep(0,periods)
 
-for(i in 1:(periods)){ #Begin for loop for monthly portfolio estimation
-  
+#Define lambda
+lambda<-200/10000
 
+
+# Define function to determine no short sell optimal portfolio
+ No_short_sale_weight <- function(mu,
+                                          Sigma,
+                                          gamma = gamma_default){
+   N <- ncol(Sigma)
+   A <- diag(N)
+   out <- quadprog::solve.QP(Dmat = gamma * Sigma,
+                             dvec = mu,
+                             Amat = A,
+                             bvec = c(rep(0, N)),
+                             meq = 1)
+   return(as.numeric(out$solution))
+ }
+ 
+
+for(i in 1:3){ #Begin for loop for monthly portfolio estimation
+  
   #Chosse the part of the data frame that matches our window
-  crsp_monthly_reduced_tmp<-crsp_monthly_reduced %>% filter(month %in% months[i:i+12])
+  crsp_monthly_reduced_tmp<-crsp_monthly_reduced %>% filter(month>=months[i]) %>% filter(month<months[i+window_length])
   # Computes sample mean excess return
   mu_hat <- (crsp_monthly_reduced_tmp %>%
   group_by(permno) %>%
   summarise(across(ret_excess, mean)))$ret_excess
 
-  r<-((crsp_monthly_reduced %>% filter(month == months[i+13]))$ret_excess)
+  r<-((crsp_monthly_reduced %>% filter(month == months[i+window_length]))$ret_excess)
 
-  
   # Computes sample variance-covariance matrix
   stocks <- unique(crsp_monthly_reduced$permno)
-  returns <- matrix(ncol = length(stocks), nrow = n_months)
+  returns <- matrix(ncol = length(stocks), nrow = window_length)
   colnames(returns) <- stocks
   for(j in 1:length(stocks)){
     returns[,j] <- (crsp_monthly_reduced_tmp %>% filter(permno == stocks[j]))$ret_excess
   }
   
   Sigma_hat <- returns %>% cov() %>% as.matrix()
-  
-#Define lambda
-lambda<-200/10000
 
-#Calculate portfolio weights
+  #Calculate portfolio weights
 
   #Naive portfolio
    NP<-rep(1/N,N)
    NP_return_tmp<-t(NP) %*% r
-  #Hautsch et al. portfolio
-    #HEA<-....   Closed form fomula
-   # HEA_return_tmp<-t(HEA) %*% mu_hat
-  #Jagannathan portfolion
-    # NSS<-...   No_short_sale_weight
-   # NSS_return_tmp<-t(NSS) %*% mu_hat
+  # Hautsch et al. portfolio
+    # HEA<-....   Closed form fomula
+    # HEA_return_tmp<-t(HEA) %*% r
+  # Jagannathan portfolion
+    # NSS<-No_short_sale_weight(mu_hat,Sigma_hat)
+    # NSS_return_tmp<-t(NSS) %*% r
 
-  
-  # calculate Transaction cost and turnover. Save them
- # NP_turnover[i]<- sum(abs(as.vector(NP)-as.vector(NP_return_tmp)))
-#  HEA_turnover[i]<- sum(abs(as.vector(HEA)-as.vector(HEA_return_tmp)))
- # NSS_turnover[i]<- sum(abs(as.vector(NSS)-as.vector(NSS_return_tmp)))
- #   
-#  NP_TC[i]<- lambda %*%(NP - NP_return_tmp)%*% sigma_hat %*% (NP - NP_return_tmp)
-#  HEA_TC[i]<- lambda %*%(NP - NP_return_tmp)%*% sigma_hat %*% (NP - NP_return_tmp)
-#  NSS_TC[i]<- lambda %*%(NP - NP_return_tmp)%*% sigma_hat %*% (NP - NP_return_tmp)
+  if(i>1){ 
+    #Calculate development in lagged portfolio
+    NP_lagged_developed<-NP_lagged*(1+r)/as.numeric(1+t(NP_lagged)%*%r)
+    # HEA_lagged_developed<-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)
+    # NSS_lagged_developed<-NSS_lagged*(1+r)/as.numeric(1+t(NSS_lagged)%*%r)
+    
+    #calculate Transaction cost and turnover. Save them
+    NP_turnover[i]<- sqrt(t(NP-NP_lagged_developed) %*% (NP-NP_lagged_developed))
+    #HEA_turnover[i]<- sqrt(t(HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)) %*% (HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)))
+    #NSS_turnover[i]<- sqrt(t(NSS-NSS_lagged_developed) %*% (NSS-NSS_lagged_developed)
 
-  #Calculate returns adjusted for transaction cost
- # NP_return<-NP_return_tmp-NP_TC[i]
- # HEA_return<-HEA_return_tmp-HEA_TC[i]
- # NSS_return<-NSS_return_tmp-NSS_TC[i]
-      
+    # Calculate transaction cost
+    NP_TC[i]<- lambda %*% t(NP-NP_lagged_developed)%*% Sigma_hat %*% (NP-NP_lagged_developed)
+    #HEA_TC[i]<- lambda %*% t(HEA - HEA_lagged)%*% Sigma_hat %*% (HEA - HEA_lagged)
+    # NSS_TC[i]<- lambda %*% t(NSS - NSS_lagged_developed)%*% Sigma_hat %*% (NSS - NSS_lagged_developed)
+    
+    #Calculate returns adjusted for transaction cost
+    NP_return[i]<-as.numeric(NP_return_tmp)-NP_TC[i]
+    # HEA_return<-as.numeric(HEA_return_tmp)-HEA_TC[i]
+    # NSS_return<-as.numeric(NSS_return_tmp)-NSS_TC[i]
+    }
+
   #Save portolio weigths lagged for turnover calculation in next month  
- # NP_lagged<-NP
-#  HEA_lagged<-HEA
-#  NSS_lagged<-NSS   
+  NP_lagged<-NP
+  #HEA_lagged<-HEA
+  # NSS_lagged<-NSS
      
 } #End loop
 
@@ -295,10 +316,14 @@ lambda<-200/10000
 
 #Sharpe ratio
 
+NP_return
 
-test_mu
+NP_turnover
+(crsp_monthly_reduced %>% filter(month==months[15]) %>% select(ret_excess))$ret_excess %>% mean()
 
 ```
+
+
 
 
 
