--- a/MA_3.Rmd
+++ b/MA_3.Rmd
@@ -26,6 +26,8 @@ if(substr(tmp,1,12) == "C:/Users/Mie"){
 }
 
 gamma_default <- 4
+window_length<-240
+lambda<-200/10000
 
 ######################
 ### END USER INPUT ###
@@ -217,9 +219,8 @@ Sigma <- returns %>% cov() %>% as.matrix()
 ```{r excersise 3: Backtesting, echo=FALSE}
 #Prepare vectors that contain results
 N<-nrow(Sigma)
-window_length<-12
 months<-sort(unique(crsp_monthly_reduced$month))
-periods<-13-window_length #Number of periods
+periods<-n_months-window_length #Number of periods
 NP_return<-rep(0,periods)
 HEA_return<-rep(0,periods)
 NSS_return<-rep(0,periods)
@@ -231,12 +232,6 @@ NSS_turnover<-rep(0,periods)
 NP_TC<-rep(0,periods)
 HEA_TC<-rep(0,periods)
 NSS_TC<-rep(0,periods)
-
-test_mu<-rep(0,periods)
-
-#Define lambda
-lambda<-200/10000
-
 
 # Define function to determine no short sell optimal portfolio
  No_short_sale_weight <- function(mu,
@@ -253,7 +248,16 @@ lambda<-200/10000
  }
  
 
-for(i in 1:3){ #Begin for loop for monthly portfolio estimation
+for(i in 1:periods){ #Begin for loop for monthly portfolio estimation
+
+  if(i>1){ 
+    #Calculate development in lagged portfolio
+    NP_lagged_developed<-NP_lagged*(1+r)/as.numeric(1+t(NP_lagged)%*%r)
+    HEA_lagged_developed<-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)
+    NSS_lagged_developed<-NSS_lagged*(1+r)/as.numeric(1+t(NSS_lagged)%*%r)
+  } else{
+    HEA_lagged<-rep(1/N,N)
+  }
   
   #Chosse the part of the data frame that matches our window
   crsp_monthly_reduced_tmp<-crsp_monthly_reduced %>% filter(month>=months[i]) %>% filter(month<months[i+window_length])
@@ -280,38 +284,34 @@ for(i in 1:3){ #Begin for loop for monthly portfolio estimation
    NP<-rep(1/N,N)
    NP_return_tmp<-t(NP) %*% r
   # Hautsch et al. portfolio
-    # HEA<-....   Closed form fomula
-    # HEA_return_tmp<-t(HEA) %*% r
+    HEA<-optimal_weights(HEA_lagged,mu_hat,Sigma_hat,lambda)
+    HEA_return_tmp<-t(HEA) %*% r
   # Jagannathan portfolion
-    # NSS<-No_short_sale_weight(mu_hat,Sigma_hat)
-    # NSS_return_tmp<-t(NSS) %*% r
+    NSS<-No_short_sale_weight(mu_hat,Sigma_hat)
+    NSS_return_tmp<-t(NSS) %*% r
 
   if(i>1){ 
-    #Calculate development in lagged portfolio
-    NP_lagged_developed<-NP_lagged*(1+r)/as.numeric(1+t(NP_lagged)%*%r)
-    # HEA_lagged_developed<-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)
-    # NSS_lagged_developed<-NSS_lagged*(1+r)/as.numeric(1+t(NSS_lagged)%*%r)
-    
+
     #calculate Transaction cost and turnover. Save them
     NP_turnover[i]<- sqrt(t(NP-NP_lagged_developed) %*% (NP-NP_lagged_developed))
-    #HEA_turnover[i]<- sqrt(t(HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)) %*% (HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)))
-    #NSS_turnover[i]<- sqrt(t(NSS-NSS_lagged_developed) %*% (NSS-NSS_lagged_developed)
+    HEA_turnover[i]<- sqrt(t(HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)) %*% (HEA-HEA_lagged*(1+r)/as.numeric(1+t(HEA_lagged)%*%r)))
+    NSS_turnover[i]<- sqrt(t(NSS-NSS_lagged_developed) %*% (NSS-NSS_lagged_developed))
 
     # Calculate transaction cost
     NP_TC[i]<- lambda %*% t(NP-NP_lagged_developed)%*% Sigma_hat %*% (NP-NP_lagged_developed)
-    #HEA_TC[i]<- lambda %*% t(HEA - HEA_lagged)%*% Sigma_hat %*% (HEA - HEA_lagged)
-    # NSS_TC[i]<- lambda %*% t(NSS - NSS_lagged_developed)%*% Sigma_hat %*% (NSS - NSS_lagged_developed)
+    HEA_TC[i]<- lambda %*% t(HEA - HEA_lagged)%*% Sigma_hat %*% (HEA - HEA_lagged)
+    NSS_TC[i]<- lambda %*% t(NSS - NSS_lagged_developed)%*% Sigma_hat %*% (NSS - NSS_lagged_developed)
     
     #Calculate returns adjusted for transaction cost
     NP_return[i]<-as.numeric(NP_return_tmp)-NP_TC[i]
-    # HEA_return<-as.numeric(HEA_return_tmp)-HEA_TC[i]
-    # NSS_return<-as.numeric(NSS_return_tmp)-NSS_TC[i]
+    HEA_return[i]<-as.numeric(HEA_return_tmp)-HEA_TC[i]
+    NSS_return[i]<-as.numeric(NSS_return_tmp)-NSS_TC[i]
     }
 
   #Save portolio weigths lagged for turnover calculation in next month  
   NP_lagged<-NP
-  #HEA_lagged<-HEA
-  # NSS_lagged<-NSS
+  HEA_lagged<-HEA
+  NSS_lagged<-NSS
      
 } #End loop
 
@@ -319,10 +319,6 @@ for(i in 1:3){ #Begin for loop for monthly portfolio estimation
 
 #Sharpe ratio
 
-NP_return
-
-NP_turnover
-(crsp_monthly_reduced %>% filter(month==months[15]) %>% select(ret_excess))$ret_excess %>% mean()
 
 ```
 
